# ipforge

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-images.yml  release.yml
backend/: Dockerfile  Dockerfile.prod  requirements-mcp.txt  requirements.txt
backend/alembic/: env.py
backend/app/: automation.py  config.py  database.py  drift.py  (+11 more)
clients/python/: README.md  pyproject.toml
clients/python/ipforge_client/: __init__.py  _coverage.py  _transport.py  client.py  exceptions.py  models.py  pagination.py
clients/python/ipforge_client/resources/: addresses.py  audit.py  dhcp.py  discovery.py  dns.py  drift.py  subnets.py  vlans.py
clients/python/tests/: conftest.py  test_addresses.py  test_client.py  test_dhcp.py  test_dns.py  test_exceptions.py  test_models.py  test_pagination.py  test_readonly.py  test_subnets.py  test_transport.py  test_vlans.py
docs/: operations.md  scaling.md  user-guide.html
frontend/: .eslintrc.cjs  capture_screenshots.mjs  index.html  package-lock.json  package.json
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  sync-cronjob.yaml
scripts/: backup.sh  bench-run.sh  bench.py  build-user-guide.py  demo-down.sh  demo-up.sh  extract-changelog.sh  restore.sh  rotate_secret_key.py  scale_seed.py  seed_demo.py  serve_bench.py  serve_demo.py  suggest-bump.sh
(+305 files in other folders)
